chore: allow adoc and txt files to be recognized

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 *.py linguist-language=C
+*.txt -linguist-documentation
+*.adoc -linguist-documentation
+*.txt -linguist-detectable
+*.adoc -linguist-detectable
